--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "npx next dev -p 3000",
+    "build": "npx next build",
+    "start": "npx next start -p 3000",
+    "lint": "npx next lint"
   },
   "dependencies": {
     "next": "11.0.1",
