--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "npx next dev -p 3000",
-    "build": "npx next build",
+    "build": "next build",
     "start": "npx next start -p 3000",
     "lint": "npx next lint"
   },
